[java] Convert Arrays.asList to List.of
GitOrigin-RevId: 311e776034eea0ea461646c330303b5cf70f5329