@@ -44,13 +44,13 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass camelMatch = myFixture.addClass("class UberInstructionUxTopicInterface {}");
     PsiClass middleMatch = myFixture.addClass("class BaseUiUtil {}");
     List<PsiClass> elements = gotoClass("uiuti");
-    assertOrderedEquals(elements, Arrays.asList(startMatch, wordSkipMatch, camelMatch, middleMatch));
+    assertOrderedEquals(elements, List.of(startMatch, wordSkipMatch, camelMatch, middleMatch));
   }
 
   public void test_goto_file_order_by_matching_degree() {
     PsiFile camel = addEmptyFile("ServiceAccessor.java");
     PsiFile startLower = addEmptyFile("sache.txt");
-    assertOrderedEquals(gotoFile("SA"), Arrays.asList(camel, startLower));
+    assertOrderedEquals(gotoFile("SA"), List.of(camel, startLower));
   }
 
   public void test_disprefer_start_matches_when_prefix_starts_with_asterisk() {
@@ -58,7 +58,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass endMatch = myFixture.addClass("class HappyHippoIT {}");
     PsiClass camelStartMatch = myFixture.addClass("class IntelligentTesting {}");
     PsiClass camelMiddleMatch = myFixture.addClass("class VeryIntelligentTesting {}");
-    assertOrderedEquals(gotoClass("*IT"), Arrays.asList(endMatch, startMatch, camelStartMatch, camelMiddleMatch));
+    assertOrderedEquals(gotoClass("*IT"), List.of(endMatch, startMatch, camelStartMatch, camelMiddleMatch));
   }
 
   public void test_annotation_syntax() {
@@ -112,9 +112,9 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
                                                   }
                                                 }
                                               """).getInnerClasses()[0].getMethods();
-    assertEquals(gotoSymbol("pkg.Cls.Inner.paint"), Arrays.asList(method));
-    assertEquals(gotoSymbol("pkg.Cls$Inner.paint"), Arrays.asList(method));
-    assertEquals(gotoSymbol("pkg.Cls$Inner#paint"), Arrays.asList(method));
+    assertEquals(gotoSymbol("pkg.Cls.Inner.paint"), List.of(method));
+    assertEquals(gotoSymbol("pkg.Cls$Inner.paint"), List.of(method));
+    assertEquals(gotoSymbol("pkg.Cls$Inner#paint"), List.of(method));
   }
 
   public void test_goto_symbol_by_Copy_Reference_result() {
@@ -127,15 +127,15 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
                                                  void bar(boolean b) {}\s
                                                  void bar(List<String> l) {}\s
                                                }""").getMethods();
-    assertEquals(gotoSymbol("pkg.Cls.foo"), Arrays.asList(methods[0]));
-    assertEquals(gotoSymbol("pkg.Cls#foo"), Arrays.asList(methods[0]));
-    assertEquals(gotoSymbol("pkg.Cls#foo(int)"), Arrays.asList(methods[0]));
+    assertEquals(gotoSymbol("pkg.Cls.foo"), List.of(methods[0]));
+    assertEquals(gotoSymbol("pkg.Cls#foo"), List.of(methods[0]));
+    assertEquals(gotoSymbol("pkg.Cls#foo(int)"), List.of(methods[0]));
     assertEquals(Set.copyOf(gotoSymbol("pkg.Cls.bar")), Set.of(methods[1], methods[2], methods[3]));
     assertEquals(Set.copyOf(gotoSymbol("pkg.Cls#bar")), Set.of(methods[1], methods[2], methods[3]));
-    assertEquals(gotoSymbol("pkg.Cls#bar(int)"), Arrays.asList(methods[1]));
-    assertEquals(gotoSymbol("pkg.Cls#bar(boolean)"), Arrays.asList(methods[2]));
-    assertEquals(gotoSymbol("pkg.Cls#bar(java.util.List)"), Arrays.asList(methods[3]));
-    assertEquals(gotoSymbol("pkg.Cls#bar(java.util.List<java.lang.String>)"), Arrays.asList(methods[3]));
+    assertEquals(gotoSymbol("pkg.Cls#bar(int)"), List.of(methods[1]));
+    assertEquals(gotoSymbol("pkg.Cls#bar(boolean)"), List.of(methods[2]));
+    assertEquals(gotoSymbol("pkg.Cls#bar(java.util.List)"), List.of(methods[3]));
+    assertEquals(gotoSymbol("pkg.Cls#bar(java.util.List<java.lang.String>)"), List.of(methods[3]));
   }
 
   public void test_disprefer_underscore() {
@@ -147,39 +147,39 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     List<PsiElement> elements = gotoSymbol("xxx");
     PsiMethod _xxx1 = intf.findMethodsByName("_xxx1", false)[0];
     PsiMethod xxx2 = intf.findMethodsByName("xxx2", false)[0];
-    assertOrderedEquals(elements, Arrays.asList(xxx2, _xxx1));
+    assertOrderedEquals(elements, List.of(xxx2, _xxx1));
   }
 
   public void test_prefer_exact_extension_matches() {
     PsiFile m = addEmptyFile("relaunch.m");
     PsiFile mod = addEmptyFile("reference.mod");
-    assertOrderedEquals(gotoFile("re*.m"), Arrays.asList(m, mod));
+    assertOrderedEquals(gotoFile("re*.m"), List.of(m, mod));
   }
 
   public void test_prefer_exact_filename_match() {
     PsiFile i = addEmptyFile("foo/i.txt");
     PsiFile index = addEmptyFile("index.html");
-    assertOrderedEquals(gotoFile("i"), Arrays.asList(i, index));
+    assertOrderedEquals(gotoFile("i"), List.of(i, index));
   }
 
   public void test_prefer_shorter_filename_match() {
     PsiFile shorter = addEmptyFile("foo/cp-users.txt");
     PsiFile longer = addEmptyFile("cp-users-and-smth.html");
-    assertOrderedEquals(gotoFile("cpusers"), Arrays.asList(shorter, longer));
+    assertOrderedEquals(gotoFile("cpusers"), List.of(shorter, longer));
   }
 
   public void test_consider_dot_idea_files_out_of_project() {
     PsiFile outside = addEmptyFile(".idea/workspace.xml");
     PsiFile inside = addEmptyFile("workspace.txt");
-    assertOrderedEquals(gotoFile("work", false), Arrays.asList(inside));
-    assertOrderedEquals(gotoFile("work", true), Arrays.asList(inside, outside));
+    assertOrderedEquals(gotoFile("work", false), List.of(inside));
+    assertOrderedEquals(gotoFile("work", true), List.of(inside, outside));
   }
 
   public void test_prefer_better_path_matches() {
     PsiFile fooIndex = myFixture.addFileToProject("foo/index.html", "foo");
     PsiFile fooBarIndex = myFixture.addFileToProject("foo/bar/index.html", "foo bar");
     PsiFile barFooIndex = myFixture.addFileToProject("bar/foo/index.html", "bar foo");
-    assertOrderedEquals(gotoFile("foo/index"), Arrays.asList(fooIndex, barFooIndex, fooBarIndex));
+    assertOrderedEquals(gotoFile("foo/index"), List.of(fooIndex, barFooIndex, fooBarIndex));
   }
 
   public void test_sort_same_named_items_by_path() {
@@ -195,8 +195,8 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiFile fooIndex = myFixture.addFileToProject("foo/index.html", "foo");
     PsiFile ooIndex = myFixture.addFileToProject("oo/index.html", "oo");
     PsiFile fooBarIndex = myFixture.addFileToProject("foo/bar/index.html", "foo bar");
-    assertOrderedEquals(gotoFile("oo/index"), Arrays.asList(ooIndex, fooIndex, fooBarIndex));
-    assertOrderedEquals(gotoFile("ndex.html"), Arrays.asList(fooIndex, ooIndex, fooBarIndex));
+    assertOrderedEquals(gotoFile("oo/index"), List.of(ooIndex, fooIndex, fooBarIndex));
+    assertOrderedEquals(gotoFile("ndex.html"), List.of(fooIndex, ooIndex, fooBarIndex));
   }
 
   public void test_prefer_files_from_current_directory() {
@@ -206,10 +206,10 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiFile barContext = addEmptyFile("bar/context.html");
 
     SearchEverywhereContributor<Object> contributor = createFileContributor(getProject(), getTestRootDisposable(), fooContext);
-    assertOrderedEquals(calcContributorElements(contributor, "index"), Arrays.asList(fooIndex, barIndex));
+    assertOrderedEquals(calcContributorElements(contributor, "index"), List.of(fooIndex, barIndex));
 
     contributor = createFileContributor(getProject(), getTestRootDisposable(), barContext);
-    assertOrderedEquals(calcContributorElements(contributor, "index"), Arrays.asList(barIndex, fooIndex));
+    assertOrderedEquals(calcContributorElements(contributor, "index"), List.of(barIndex, fooIndex));
   }
 
   private PsiFile addEmptyFile(String relativePath) {
@@ -218,7 +218,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
   public void test_accept_file_paths_starting_with_a_dot() {
     PsiFile file = addEmptyFile("foo/index.html");
-    assertOrderedEquals(gotoFile("./foo/in"), Arrays.asList(file));
+    assertOrderedEquals(gotoFile("./foo/in"), List.of(file));
   }
 
   public void test_don_t_match_path_to_jdk() {
@@ -237,21 +237,21 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiDirectory fooDir = fooIndex.getContainingDirectory();
     PsiDirectory barDir = barIndex.getContainingDirectory();
 
-    assertOrderedEquals(calcContributorElements(contributor, "foo/"), Arrays.asList(fooDir));
-    assertOrderedEquals(calcContributorElements(contributor, "foo\\"), Arrays.asList(fooDir));
-    assertOrderedEquals(calcContributorElements(contributor, "/foo"), Arrays.asList(fooDir));
-    assertOrderedEquals(calcContributorElements(contributor, "\\foo"), Arrays.asList(fooDir));
-    assertOrderedEquals(calcContributorElements(contributor, "foo"), Arrays.asList(fooDir));
-    assertOrderedEquals(calcContributorElements(contributor, "/index.html"), Arrays.asList(fooIndex));
-    assertOrderedEquals(calcContributorElements(contributor, "\\index.html"), Arrays.asList(fooIndex));
+    assertOrderedEquals(calcContributorElements(contributor, "foo/"), List.of(fooDir));
+    assertOrderedEquals(calcContributorElements(contributor, "foo\\"), List.of(fooDir));
+    assertOrderedEquals(calcContributorElements(contributor, "/foo"), List.of(fooDir));
+    assertOrderedEquals(calcContributorElements(contributor, "\\foo"), List.of(fooDir));
+    assertOrderedEquals(calcContributorElements(contributor, "foo"), List.of(fooDir));
+    assertOrderedEquals(calcContributorElements(contributor, "/index.html"), List.of(fooIndex));
+    assertOrderedEquals(calcContributorElements(contributor, "\\index.html"), List.of(fooIndex));
     assertEmpty(calcContributorElements(contributor, "index.html/"));
     assertEmpty(calcContributorElements(contributor, "index.html\\"));
-    assertOrderedEquals(calcContributorElements(contributor, "bar.txt/"), Arrays.asList(barDir));
-    assertOrderedEquals(calcContributorElements(contributor, "bar.txt\\"), Arrays.asList(barDir));
-    assertOrderedEquals(calcContributorElements(contributor, "/bar.txt"), Arrays.asList(barIndex, barDir));
-    assertOrderedEquals(calcContributorElements(contributor, "\\bar.txt"), Arrays.asList(barIndex, barDir));
-    assertOrderedEquals(calcContributorElements(contributor, "bar.txt"), Arrays.asList(barIndex, barDir));
-    assertOrderedEquals(calcContributorElements(contributor, "bar"), Arrays.asList(barIndex, barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "bar.txt/"), List.of(barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "bar.txt\\"), List.of(barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "/bar.txt"), List.of(barIndex, barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "\\bar.txt"), List.of(barIndex, barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "bar.txt"), List.of(barIndex, barDir));
+    assertOrderedEquals(calcContributorElements(contributor, "bar"), List.of(barIndex, barDir));
   }
 
   public void test_prefer_files_to_directories_even_if_longer() {
@@ -261,47 +261,47 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     SearchEverywhereContributor<Object> contributor = createFileContributor(getProject(), getTestRootDisposable());
     List<?> popupElements = calcContributorElements(contributor, "foo");
 
-    assertOrderedEquals(popupElements, Arrays.asList(fooFile, fooDir));
+    assertOrderedEquals(popupElements, List.of(fooFile, fooDir));
   }
 
   public void test_find_method_by_qualified_name() {
     PsiClass clazz = myFixture.addClass("package foo.bar; class Goo { void zzzZzz() {} }");
     PsiMethod method = clazz.getMethods()[0];
-    assertOrderedEquals(gotoSymbol("zzzZzz"), Arrays.asList(method));
-    assertOrderedEquals(gotoSymbol("goo.zzzZzz"), Arrays.asList(method));
-    assertOrderedEquals(gotoSymbol("foo.bar.goo.zzzZzz"), Arrays.asList(method));
-    assertOrderedEquals(gotoSymbol("foo.zzzZzz"), Arrays.asList(method));
-    assertOrderedEquals(gotoSymbol("bar.zzzZzz"), Arrays.asList(method));
-    assertOrderedEquals(gotoSymbol("bar.goo.zzzZzz"), Arrays.asList(method));
+    assertOrderedEquals(gotoSymbol("zzzZzz"), List.of(method));
+    assertOrderedEquals(gotoSymbol("goo.zzzZzz"), List.of(method));
+    assertOrderedEquals(gotoSymbol("foo.bar.goo.zzzZzz"), List.of(method));
+    assertOrderedEquals(gotoSymbol("foo.zzzZzz"), List.of(method));
+    assertOrderedEquals(gotoSymbol("bar.zzzZzz"), List.of(method));
+    assertOrderedEquals(gotoSymbol("bar.goo.zzzZzz"), List.of(method));
   }
 
   public void test_line_and_column_suffix() {
     PsiClass c = myFixture.addClass("package foo; class Bar {}");
-    assertOrderedEquals(gotoClass("Bar"), Arrays.asList(c));
-    assertOrderedEquals(gotoClass("Bar:2"), Arrays.asList(c));
-    assertOrderedEquals(gotoClass("Bar:2:3"), Arrays.asList(c));
-    assertOrderedEquals(gotoClass("Bar:[2:3]"), Arrays.asList(c));
-    assertOrderedEquals(gotoClass("Bar:[2,3]"), Arrays.asList(c));
+    assertOrderedEquals(gotoClass("Bar"), List.of(c));
+    assertOrderedEquals(gotoClass("Bar:2"), List.of(c));
+    assertOrderedEquals(gotoClass("Bar:2:3"), List.of(c));
+    assertOrderedEquals(gotoClass("Bar:[2:3]"), List.of(c));
+    assertOrderedEquals(gotoClass("Bar:[2,3]"), List.of(c));
   }
 
   public void test_custom_line_suffixes() {
     PsiFile file = addEmptyFile("Bar.txt");
-    assertOrderedEquals(gotoFile("Bar:2"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar(2)"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar on line 2"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar at line 2"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar 2:39"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar#L2"), Arrays.asList(file));
-    assertOrderedEquals(gotoFile("Bar?l=2"), Arrays.asList(file));
+    assertOrderedEquals(gotoFile("Bar:2"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar(2)"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar on line 2"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar at line 2"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar 2:39"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar#L2"), List.of(file));
+    assertOrderedEquals(gotoFile("Bar?l=2"), List.of(file));
   }
 
   public void test_dollar() {
     PsiClass bar = myFixture.addClass("package foo; class Bar { class Foo {} }");
     PsiClass foo = bar.getInnerClasses()[0];
     myFixture.addClass("package goo; class Goo { }");
-    assertOrderedEquals(gotoClass("Bar$Foo"), Arrays.asList(foo));
-    assertOrderedEquals(gotoClass("foo.Bar$Foo"), Arrays.asList(foo));
-    assertOrderedEquals(gotoClass("foo.B$F"), Arrays.asList(foo));
+    assertOrderedEquals(gotoClass("Bar$Foo"), List.of(foo));
+    assertOrderedEquals(gotoClass("foo.Bar$Foo"), List.of(foo));
+    assertOrderedEquals(gotoClass("foo.B$F"), List.of(foo));
     assertEmpty(gotoClass("foo$Foo"));
     assertEmpty(gotoClass("foo$Bar"));
     assertEmpty(gotoClass("foo$Bar$Foo"));
@@ -310,17 +310,17 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
   public void test_anonymous_classes() {
     PsiClass goo = myFixture.addClass("package goo; class Goo { Runnable r = new Runnable() {}; }");
-    assertOrderedEquals(gotoClass("Goo$1"), Arrays.asList(goo));
-    assertOrderedEquals(gotoSymbol("Goo$1"), Arrays.asList(goo));
+    assertOrderedEquals(gotoClass("Goo$1"), List.of(goo));
+    assertOrderedEquals(gotoSymbol("Goo$1"), List.of(goo));
   }
 
   public void test_qualified_name_matching() {
     PsiClass bar = myFixture.addClass("package foo.bar; class Bar { }");
     PsiClass bar2 = myFixture.addClass("package goo.baz; class Bar { }");
-    assertOrderedEquals(gotoClass("foo.Bar"), Arrays.asList(bar));
-    assertOrderedEquals(gotoClass("foo.bar.Bar"), Arrays.asList(bar));
-    assertOrderedEquals(gotoClass("goo.Bar"), Arrays.asList(bar2));
-    assertOrderedEquals(gotoClass("goo.baz.Bar"), Arrays.asList(bar2));
+    assertOrderedEquals(gotoClass("foo.Bar"), List.of(bar));
+    assertOrderedEquals(gotoClass("foo.bar.Bar"), List.of(bar));
+    assertOrderedEquals(gotoClass("goo.Bar"), List.of(bar2));
+    assertOrderedEquals(gotoClass("goo.baz.Bar"), List.of(bar2));
   }
 
   private static List<PsiElement> filterJavaOnly(List<PsiElement> elems) {
@@ -349,12 +349,12 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     withLibs.remove(sdkRun2);
     withLibs.remove(sdkRun3);
     if (!DumbService.isDumb(myFixture.getProject())) { // in dumb mode overridden are also shown
-      assertOrderedEquals(withLibs, Arrays.asList(sdkRun));
+      assertOrderedEquals(withLibs, List.of(sdkRun));
     }
     assertDoesntContain(withLibs, ourRun);
 
     List<PsiElement> noLibs = filterJavaOnly(gotoSymbol("run ", false));
-    assertOrderedEquals(noLibs, Arrays.asList(ourRun));
+    assertOrderedEquals(noLibs, List.of(ourRun));
     assertDoesntContain(noLibs, sdkRun);
   }
 
@@ -363,15 +363,15 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass subClass = myFixture.addClass("class Sub extends Base { void xpaint() {} }");
     PsiMethod base = baseClass.getMethods()[0];
     PsiMethod sub = subClass.getMethods()[0];
-    assertOrderedEquals(gotoSymbol("Ba.xpai", false), Arrays.asList(base));
-    assertOrderedEquals(gotoSymbol("Su.xpai", false), Arrays.asList(sub));
+    assertOrderedEquals(gotoSymbol("Ba.xpai", false), List.of(base));
+    assertOrderedEquals(gotoSymbol("Su.xpai", false), List.of(sub));
   }
 
   public void test_groovy_script_class_with_non_identifier_name() {
     GroovyFile file1 = (GroovyFile)addEmptyFile("foo.groovy");
     GroovyFile file2 = (GroovyFile)addEmptyFile("foo-bar.groovy");
     List<PsiElement> variants = gotoSymbol("foo", false);
-    assertOrderedEquals(variants, Arrays.asList(file1.getScriptClass(), file2.getScriptClass()));
+    assertOrderedEquals(variants, List.of(file1.getScriptClass(), file2.getScriptClass()));
   }
 
   public void test_prefer_case_insensitive_exact_prefix_match() {
@@ -380,7 +380,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass smth2 = myFixture.addClass("class xfile_baton_t {}");
     SearchEverywhereContributor<Object> contributor = createClassContributor(getProject(), getTestRootDisposable());
     List<?> popupElements = calcContributorElements(contributor, "xfile");
-    assertOrderedEquals(popupElements, Arrays.asList(wanted, smth2, smth1));
+    assertOrderedEquals(popupElements, List.of(wanted, smth2, smth1));
   }
 
   public void test_prefer_prefix_match() {
@@ -388,7 +388,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass smth = myFixture.addClass("class DroolsPsiClassImpl {}");
     SearchEverywhereContributor<Object> contributor = createClassContributor(getProject(), getTestRootDisposable());
     List<?> popupElements = calcContributorElements(contributor, "PsiCl");
-    assertOrderedEquals(popupElements, Arrays.asList(wanted, smth));
+    assertOrderedEquals(popupElements, List.of(wanted, smth));
   }
 
   public void test_out_of_project_content_files() {
@@ -405,10 +405,10 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
     SearchEverywhereContributor<Object> contributor =
       createClassContributor(getProject(), getTestRootDisposable(), myFixture.addClass("class Context {}").getContainingFile());
-    assertOrderedEquals(calcContributorElements(contributor, "List"), Arrays.asList(bar, foo));
+    assertOrderedEquals(calcContributorElements(contributor, "List"), List.of(bar, foo));
 
     JavaProjectCodeInsightSettings.setExcludedNames(getProject(), getTestRootDisposable(), "bar");
-    assertOrderedEquals(calcContributorElements(contributor, "List"), Arrays.asList(foo, bar));
+    assertOrderedEquals(calcContributorElements(contributor, "List"), List.of(foo, bar));
   }
 
   public void test_file_path_matching_without_slashes() {
@@ -417,14 +417,14 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiFile fbSomeFile = addEmptyFile("fb/some.dir/index_fbSome.html");
     PsiFile someFbFile = addEmptyFile("some/fb/index_someFb.html");
 
-    assertOrderedEquals(gotoFile("barindex"), Arrays.asList(fooBarFile));
-    assertOrderedEquals(gotoFile("fooindex"), Arrays.asList(fooBarFile));
-    assertOrderedEquals(gotoFile("fbindex"), Arrays.asList(fbFile, someFbFile, fbSomeFile, fooBarFile));
-    assertOrderedEquals(gotoFile("fbhtml"), Arrays.asList(fbFile, someFbFile, fbSomeFile, fooBarFile));
+    assertOrderedEquals(gotoFile("barindex"), List.of(fooBarFile));
+    assertOrderedEquals(gotoFile("fooindex"), List.of(fooBarFile));
+    assertOrderedEquals(gotoFile("fbindex"), List.of(fbFile, someFbFile, fbSomeFile, fooBarFile));
+    assertOrderedEquals(gotoFile("fbhtml"), List.of(fbFile, someFbFile, fbSomeFile, fooBarFile));
 
     // partial slashes
-    assertOrderedEquals(gotoFile("somefb/index.html"), Arrays.asList(someFbFile));
-    assertOrderedEquals(gotoFile("somefb\\index.html"), Arrays.asList(someFbFile));
+    assertOrderedEquals(gotoFile("somefb/index.html"), List.of(someFbFile));
+    assertOrderedEquals(gotoFile("somefb\\index.html"), List.of(someFbFile));
   }
 
   public void test_file_path_matching_with_spaces_instead_of_slashes() {
@@ -435,16 +435,16 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
   public void test_multiple_slashes_in_goto_file() {
     PsiFile file = addEmptyFile("foo/bar/goo/file.txt");
-    for (String path : Arrays.asList("foo/goo/file.txt", "foo/bar/file.txt", "bar/goo/file.txt", "foo/bar/goo/file.txt")) {
-      assertOrderedEquals(gotoFile(path), Arrays.asList(file));
-      assertOrderedEquals(gotoFile(path.replace("/", "\\")), Arrays.asList(file));
+    for (String path : List.of("foo/goo/file.txt", "foo/bar/file.txt", "bar/goo/file.txt", "foo/bar/goo/file.txt")) {
+      assertOrderedEquals(gotoFile(path), List.of(file));
+      assertOrderedEquals(gotoFile(path.replace("/", "\\")), List.of(file));
     }
   }
 
   public void test_show_matches_from_different_suffixes() {
     PsiFile enumControl = addEmptyFile("sample/EnumControl.java");
     PsiFile control = addEmptyFile("sample/ControlSmth.java");
-    assertOrderedEquals(gotoFile("samplecontrol", false), Arrays.asList(enumControl, control));
+    assertOrderedEquals(gotoFile("samplecontrol", false), List.of(enumControl, control));
   }
 
   public void test_show_longer_suffix_matches_from_jdk_and_shorter_from_project() {
@@ -452,12 +452,12 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass charSeq = DumbService.getInstance(myFixture.getProject()).computeWithAlternativeResolveEnabled(
       () -> myFixture.findClass(CharSequence.class.getName())
     );
-    assertOrderedEquals(gotoFile("langcsequence", true), Arrays.asList(charSeq.getContainingFile(), seq));
+    assertOrderedEquals(gotoFile("langcsequence", true), List.of(charSeq.getContainingFile(), seq));
   }
 
   public void test_show_no_matches_from_jdk_when_there_are_in_project() {
     PsiFile file = addEmptyFile("String.txt");
-    assertOrderedEquals(gotoFile("Str", false), Arrays.asList(file));
+    assertOrderedEquals(gotoFile("Str", false), List.of(file));
   }
 
   public void test_fix_keyboard_layout() {
@@ -472,14 +472,14 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
   public void test_prefer_exact_case_match() {
     PsiClass upper = myFixture.addClass("package foo; class SOMECLASS {}");
     PsiClass camel = myFixture.addClass("package bar; class SomeClass {}");
-    assertOrderedEquals(gotoClass("SomeClass"), Arrays.asList(camel, upper));
-    assertOrderedEquals(gotoFile("SomeClass.java"), Arrays.asList(camel.getContainingFile(), upper.getContainingFile()));
+    assertOrderedEquals(gotoClass("SomeClass"), List.of(camel, upper));
+    assertOrderedEquals(gotoFile("SomeClass.java"), List.of(camel.getContainingFile(), upper.getContainingFile()));
   }
 
   public void test_prefer_closer_path_match() {
     PsiFile index = addEmptyFile("content/objc/features/index.html");
     PsiFile i18n = addEmptyFile("content/objc/features/screenshots/i18n.html");
-    assertOrderedEquals(gotoFile("objc/features/i"), Arrays.asList(index, i18n));
+    assertOrderedEquals(gotoFile("objc/features/i"), List.of(index, i18n));
   }
 
   public void test_search_for_full_name() {
@@ -489,7 +489,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     SearchEverywhereContributor<Object> contributor = createFileContributor(getProject(), getTestRootDisposable());
     List<Object> files =
       calcWeightedContributorElements((WeightedSearchEverywhereContributor<?>)contributor, "Folder/Web/SubFolder/Flow.html");
-    assertOrderedEquals(files, Arrays.asList(file1, file2));
+    assertOrderedEquals(files, List.of(file1, file2));
   }
 
   public void test_prefer_name_match_over_path_match() {
@@ -498,40 +498,40 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
     SearchEverywhereContributor<Object> contributor = createFileContributor(getProject(), getTestRootDisposable());
     List<Object> files = calcWeightedContributorElements((WeightedSearchEverywhereContributor<?>)contributor, "CefBrowser");
-    assertOrderedEquals(files, Arrays.asList(nameMatchFile, pathMatchFile));
+    assertOrderedEquals(files, List.of(nameMatchFile, pathMatchFile));
   }
 
   public void test_matching_file_in_a_matching_directory() {
     PsiFile file = addEmptyFile("foo/index/index");
-    assertOrderedEquals(gotoFile("in"), Arrays.asList(file, file.getParent()));
-    assertOrderedEquals(gotoFile("foin"), Arrays.asList(file, file.getParent()));
+    assertOrderedEquals(gotoFile("in"), List.of(file, file.getParent()));
+    assertOrderedEquals(gotoFile("foin"), List.of(file, file.getParent()));
   }
 
   public void test_prefer_fully_matching_module_name() {
     PsiJavaFile module = (PsiJavaFile)myFixture.addFileToProject("module-info.java", "module foo.bar {}");
     PsiClass clazz = myFixture.addClass("package foo; class B { void bar() {} void barX() {} }");
-    assertOrderedEquals(gotoSymbol("foo.bar"), Arrays.asList(module.getModuleDeclaration(), clazz.getMethods()[0], clazz.getMethods()[1]));
+    assertOrderedEquals(gotoSymbol("foo.bar"), List.of(module.getModuleDeclaration(), clazz.getMethods()[0], clazz.getMethods()[1]));
   }
 
   public void test_allow_name_separators_inside_wildcard() {
     PsiClass clazz = myFixture.addClass("package foo; class X { void bar() {} }");
-    assertOrderedEquals(gotoSymbol("foo*bar"), Arrays.asList(clazz.getMethods()[0]));
-    assertOrderedEquals(gotoClass("foo*X"), Arrays.asList(clazz));
-    assertOrderedEquals(gotoClass("X"), Arrays.asList(clazz));
-    assertOrderedEquals(gotoClass("foo.*"), Arrays.asList(clazz));
+    assertOrderedEquals(gotoSymbol("foo*bar"), List.of(clazz.getMethods()[0]));
+    assertOrderedEquals(gotoClass("foo*X"), List.of(clazz));
+    assertOrderedEquals(gotoClass("X"), List.of(clazz));
+    assertOrderedEquals(gotoClass("foo.*"), List.of(clazz));
   }
 
   public void test_prefer_longer_name_vs_qualifier_matches() {
     PsiClass myInspection = myFixture.addClass("package ss; class MyInspection { }");
     PsiClass ssBasedInspection = myFixture.addClass("package foo; class SSBasedInspection { }");
-    assertOrderedEquals(gotoClass("ss*inspection"), Arrays.asList(ssBasedInspection, myInspection));
+    assertOrderedEquals(gotoClass("ss*inspection"), List.of(ssBasedInspection, myInspection));
   }
 
   public void test_show_all_same_named_classes_sorted_by_qname() {
     PsiClass aFoo = myFixture.addClass("package a; class Foo { }");
     PsiClass bFoo = myFixture.addClass("package b; class Foo { }");
     PsiClass fooBar = myFixture.addClass("package c; class FooBar { }");
-    assertOrderedEquals(gotoClass("Foo"), Arrays.asList(aFoo, bFoo, fooBar));
+    assertOrderedEquals(gotoClass("Foo"), List.of(aFoo, bFoo, fooBar));
   }
 
   public void test_show_prefix_matches_first_when_asterisk_is_in_the_middle() {
@@ -541,14 +541,14 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
     PsiClass asb = DumbService.getInstance(myFixture.getProject()).computeWithAlternativeResolveEnabled(
       () -> myFixture.findClass("java.lang.AbstractStringBuilder")
     );
-    assertOrderedEquals(gotoClass("Str*Builder", true), Arrays.asList(sb, asb));
-    assertOrderedEquals(gotoClass("java.Str*Builder", true), Arrays.asList(sb, asb));
+    assertOrderedEquals(gotoClass("Str*Builder", true), List.of(sb, asb));
+    assertOrderedEquals(gotoClass("java.Str*Builder", true), List.of(sb, asb));
   }
 
   public void test_include_overridden_qualified_name_method_matches() {
     PsiMethod m1 = myFixture.addClass("interface HttpRequest { void start() {} }").getMethods()[0];
     PsiMethod m2 = myFixture.addClass("interface Request extends HttpRequest { void start() {} }").getMethods()[0];
-    assertOrderedEquals(gotoSymbol("Request.start"), Arrays.asList(m1, m2));
+    assertOrderedEquals(gotoSymbol("Request.start"), List.of(m1, m2));
     if (DumbService.getInstance(myFixture.getProject()).isDumb()) {
       assertOrderedEquals(gotoSymbol("start"), List.of(m1, m2)); // can't remove overrides in dumb mode
     } else {
@@ -558,19 +558,19 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
 
   public void test_colon_in_search_end() {
     PsiClass foo = myFixture.addClass("class Foo { }");
-    assertOrderedEquals(gotoClass("Foo:"), Arrays.asList(foo));
+    assertOrderedEquals(gotoClass("Foo:"), List.of(foo));
   }
 
   public void test_multi_word_class_name_with_only_first_letter_of_second_word() {
     myFixture.addClass("class Foo { }");
     PsiClass fooBar = myFixture.addClass("class FooBar { }");
-    assertOrderedEquals(gotoClass("Foo B"), Arrays.asList(fooBar));
+    assertOrderedEquals(gotoClass("Foo B"), List.of(fooBar));
   }
 
   public void test_prefer_filename_match_regardless_of_package_match() {
     PsiFile f1 = addEmptyFile("resolve/ResolveCache.java");
     PsiFile f2 = addEmptyFile("abc/ResolveCacheSettings.xml");
-    assertOrderedEquals(gotoFile("resolvecache"), Arrays.asList(f1, f2));
+    assertOrderedEquals(gotoFile("resolvecache"), List.of(f1, f2));
   }
 
   public void test_search_for_long_full_name() {
@@ -579,7 +579,7 @@ public class ChooseByNameTest extends LightJavaCodeInsightFixtureTestCase {
                                             "ggggggggggggggggg/hhhhhhhhhhhhhhhh/ClassName.java");
 
     assertOrderedEquals(gotoFile("bbbbbbbbbbbbbbbb/cccccccccccccccccc/ddddddddddddddddd/eeeeeeeeeeeeeeee/" +
-                                 "ffffffffffffffffff/ggggggggggggggggg/hhhhhhhhhhhhhhhh/ClassName.java"), Arrays.asList(veryLongNameFile));
+                                 "ffffffffffffffffff/ggggggggggggggggg/hhhhhhhhhhhhhhhh/ClassName.java"), List.of(veryLongNameFile));
   }
 
   @SuppressWarnings("unchecked")
